# Acid-Editor

./: .appveyor.yml  .gitignore  Acid-Editor.sln  CMakeLists.txt  LICENSE  README.md
Acid.Editor/: Acid.Editor.csproj  Icons.Designer.cs  Icons.resx  Program.cs  app.config  packages.config
Acid.Editor/Forms/: MainForm.Designer.cs  MainForm.cs  MainForm.resx
Acid.Editor/Helpers/: SerializerHelper.cs
Acid.Editor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Acid.Editor/Script/: Script.cs
Acid.Forms/: Acid.Forms.csproj  DockIcons.Designer.cs  MenuIcons.Designer.cs  MenuIcons.resx  MessageBoxIcons.Designer.cs  MessageBoxIcons.resx  ScrollIcons.Designer.cs  TreeViewIcons.Designer.cs  TreeViewIcons.resx
Acid.Forms/Collections/: ObservableList.cs  ObservableListModified.cs  SortableBindingList.cs
Acid.Forms/Config/: Colours.cs  Consts.cs
Acid.Forms/Controls/: DarkButton.cs  DarkButtonStyle.cs  DarkCheckBox.cs  DarkCheckedListBox.cs  DarkComboBox.cs  DarkContextMenu.cs  DarkLabel.cs  (+27 more)
Acid.UI/: Acid.UI.csproj  DockIcons.Designer.cs  DockIcons.resx  MessageBoxIcons.Designer.cs  TreeViewIcons.Designer.cs
AcidEditor/: AcidEditor.csproj  Icons.Designer.cs  Icons.resx  Program.cs  packages.config
DarkUI/: DarkUI.csproj  DockIcons.Designer.cs  TreeViewIcons.Designer.cs
Scripts/: Info.plist  link-resources.bat  link-resources.sh  package-macos.sh
Sources/: CMakeLists.txt  CMakeSources.cmake  Main.cpp  MainRenderer.cpp
Sources/Scenes/: FpsCamera.cpp  FpsCamera.hpp  FpsPlayer.cpp  Scene1.cpp  Scene1.hpp
Sources/Uis/: OverlayDebug.cpp
(+176 files in other folders)
